# Othello-GUI

./: .gitignore  README.md  package.json
.github/workflows/: node.js.yml
othello-bindings/: declarations.d.ts  package.json
othello-bindings/lib/: index.d.ts  index.js
othello-bindings/native/: Cargo.toml
othello-bindings/native/src/: lib.rs
othello-gui/: package.json
othello-gui/src/: index.css  index.html  index.js  renderer.js
