[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "othello-ai-neon"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "othello_ai_neon"

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
othello_ai = {git = "https://github.com/lukechu10/Othello-AI"}
